# Lebah

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  index.html  node_modules  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
e2e/: playwright.config.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  storage.rs
src-tauri/src/application/: errors.rs  event_bus.rs  mod.rs  ports.rs
src-tauri/src/application/git/: service.rs
src-tauri/src/application/project/: commands.rs  service.rs
src-tauri/src/application/session/: commands.rs  handle_pump.rs  mod.rs  service.rs
src-tauri/src/application/task/: commands.rs  service.rs
src-tauri/src/domain/: errors.rs  mod.rs  repositories.rs
src-tauri/src/domain/agent/: runner.rs
src-tauri/src/domain/git/: value_objects.rs
src-tauri/src/domain/project/: aggregate.rs  events.rs  mod.rs  value_objects.rs
src-tauri/src/domain/session/: aggregate.rs  events.rs  mod.rs
src-tauri/src/domain/task/: aggregate.rs  events.rs  value_objects.rs
src-tauri/src/infrastructure/: app_services.rs  mod.rs
src-tauri/src/infrastructure/agents/: mod.rs  registry.rs
src-tauri/src/infrastructure/event_handlers/: mod.rs  output_persistence_handler.rs  session_status_handler.rs  tauri_event_emitter.rs
src-tauri/src/infrastructure/git/: git_service.rs
src-tauri/src/infrastructure/persistence/: file_output_repository.rs  json_project_repository.rs  json_task_repository.rs  mod.rs  path_resolver.rs
src-tauri/src/infrastructure/session/: mod.rs  process_session_manager.rs
src-tauri/src/infrastructure/terminal/: pty_manager.rs
src-tauri/src/presentation/: dto.rs  mod.rs
(+72 files in other folders)
