[package]
name = "lebah"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["process", "rt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
